feat: similar products section
