# electro.api.rest.new/Application/Features/ProductCatalog/GetSimilarProducts/GetSimilarProductsQuery.cs
@@ -1,0 +1,10 @@
+using MediatR;
+
+namespace Application.Features.ProductCatalog.GetSimilarProducts
+{
+    public class GetSimilarProductsQuery : IRequest<GetSimilarProductsResult>
+    {
+        public Guid ProductId { get; set; }
+        public int Limit { get; set; } = 8;
+    }
+}
